# DiceEngine

./: README.md  helper.md  helper.txt  setup.cfg  setup.py  todo.md
examples/: basic.py  games_to_test_against.md
src/: Dice.py  PossibleMultiplayerSetup.md
src/DiceEngine/: Dice.py  RollManager.py  __init__.py  dice.py  die.py  roll_manager.py
tests/: _notes.md  promptForAdditionalTests.txt  test_dice.py  test_die.py  test_roll_manager.py  test_rollmanager.py
